--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "cy:open": "cypress open",
     "cy:open:tablet": "cypress open --config viewportWidth=767,viewportHeight=480",
     "test": "cypress run",
-    "test:tablet": "cypress run --config viewportWidth=767,viewportHeight=480 --spec cypress/e2e/authenticated.cy.js"
+    "test:tablet": "cypress run --config viewportWidth=767,viewportHeight=480 --spec cypress/e2e/authenticated.cy.js""test:cloud": "cypress run --record --tag 'desktop'",
+    "test:tablet:cloud": "cypress run --record --tag 'desktop'ecypress run --record --tag 'tablet' --config viewportWidth=767,viewportHeight=480 --spec cypress/e2e/authenticated.cy.js"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
