--- a/package.json
+++ b/package.json
@@ -1,11 +1,27 @@
-"scripts": {
-  "cypress:open": "cypress open",
-  "lint": "eslint cypress/**/*.js && eslint cypress.config.js",
-  "lint:fix": "eslint cypress/**/*.js --fix && eslint cypress.config.js --fix",
-  "cy:open": "cypress open",
-  "cy:open:tablet": "cypress open --config viewportWidth=767,viewportHeight=480",
-  "test": "cypress run",
-  "test:tablet": "cypress run --config viewportWidth=767,viewportHeight=480 --spec cypress/e2e/authenticated.cy.js",
-  "test:cloud": "cypress run --record --key $CYPRESS_RECORD_KEY --tag 'desktop'",
-  "test:tablet:cloud": "cypress run --record --key $CYPRESS_RECORD_KEY --tag 'tablet' --config viewportWidth=767,viewportHeight=480 --spec cypress/e2e/authenticated.cy.js"
+{
+  "name": "cypresstestesend",
+  "version": "1.0.0",
+  "description": "Testes de signup com Mailosaur e Cypress",
+  "type": "module",
+  "main": "cypress.config.js",
+  "scripts": {
+    "cypress:open": "cypress open",
+    "lint": "eslint cypress/**/*.js && eslint cypress.config.js",
+    "lint:fix": "eslint cypress/**/*.js --fix && eslint cypress.config.js --fix",
+    "cy:open": "cypress open",
+    "cy:open:tablet": "cypress open --config viewportWidth=767,viewportHeight=480",
+    "test": "cypress run",
+    "test:tablet": "cypress run --config viewportWidth=767,viewportHeight=480 --spec cypress/e2e/authenticated.cy.js",
+    "test:cloud": "cypress run --record --tag 'desktop'",
+    "test:tablet:cloud": "cypress run --record --tag 'tablet' --config viewportWidth=767,viewportHeight=480 --spec cypress/e2e/authenticated.cy.js --env grepTags=@desktop-and-tablet,grepOmitFiltered=true"
+  },
+  "devDependencies": {
+    "@cypress/grep": "^3.1.5",
+    "@faker-js/faker": "^8.0.2",
+    "cypress": "^12.15.0",
+    "cypress-iframe": "^1.0.1",
+    "cypress-mailosaur": "^2.13.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-cypress": "^2.13.3"
+  }
 }
